--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 
         <section>
         <div class="blu">
-            <div >
-                <h1 id="green">Above</h1>
+            <div id="green">
+                <h1>Above</h1>
             </div>
-            <div>
-                <h1 id="red">Under</h1>
+            <div id="red">
+                <h1>Under</h1>
             </div>
         </div>
         </section>
